--- a/templates/index.html
+++ b/templates/index.html
@@ -201,7 +201,7 @@
         <h4>Free Plan</h4>
         <p>Store up to 30 invoices</p>
         <h2>$0</h2>
-        <button class="btn btn-dark w-100 mt-3">Start Free</button>
+        <a href="/upload" class="btn btn-dark w-100 mt-3">Start Free</a>
       </div>
     </div>
 
@@ -210,7 +210,7 @@
         <h4>Premium Plan</h4>
         <p>Unlimited invoices + full analytics</p>
         <h2>$5/month</h2>
-        <button class="btn btn-light w-100 mt-3">Upgrade Now</button>
+        <a href="/pricing" class="btn btn-light w-100 mt-3">Upgrade Now</a>
       </div>
     </div>
   </div>
