--- a/templates/about.html
+++ b/templates/about.html
@@ -105,7 +105,7 @@
         <div class="card p-3 shadow h-100">
           <img src="{{ url_for('static', filename='images/vathanak.jpg') }}" class="card-img-top rounded-circle mb-3" alt="Team Member">
           <h5>Vathanak Long</h5>
-          <p>Backend Developerr</p>
+          <p>Backend Developer</p>
         </div>
       </div>
       <div class="col-md-3">
