--- a/templates/index.html
+++ b/templates/index.html
@@ -48,6 +48,12 @@
         <li class="nav-item">
           <a class="nav-link" href="/about">About Us</a>
         </li>
+        <li class="nav-item">
+        <a class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#loginModal">Login</a>
+        </li>
+          <li class="nav-item">
+          <a class="btn btn-warning ms-2" href="#" data-bs-toggle="modal" data-bs-target="#signupModal">Sign Up</a>
+        </li>
       </ul>
     </div>
   </div>
